# tickets

./: .gitignore  MIGRATION_SUMMARY.md  README-PYTHON.md  README_PYTHON.md  main.py  package-lock.json  pyproject.toml  requirements.txt  test_core.py  test_python.py
api/: __init__.py  server.py
bot/: __init__.py  client.py
bot/commands/: __init__.py  close.py  new.py  tickets.py
bot/interactions/: __init__.py
bot/interactions/buttons/: __init__.py  ticket_buttons.py
bot/tickets/: __init__.py  manager.py
config/: env.py
database/: __init__.py  models.py
locales/: en-GB.yml
src/: main.py
src/cogs/: __init__.py  admin.py  events.py  tickets.py
src/commands/: __init__.py  claim.py  close.py  new.py
src/config/: __init__.py  database.py  settings.py
src/models/: __init__.py  archived_channel.py  archived_message.py  archived_role.py  archived_user.py  category.py  feedback.py  guild.py  question.py  tag.py  ticket.py  user.py
src/utils/: __init__.py  crypto.py  i18n.py  logger.py  permissions.py
src/views/: __init__.py  category_select.py  close_confirmation.py  ticket_buttons.py  ticket_modals.py
src/web/: server.py
utils/: __init__.py  embed.py  i18n.py  logger.py  users.py
